ros2_ws/log/build_2024-08-12_12-27-28/serial_communicator/stderr.log
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/simple_serial.cpp:40:45: error: variable 'data' cannot be implicitly captured in a lambda with no capture-default specified
                    std::cout << "Sent " << data << " bytes to the Arduino." << std::endl;
                                            ^
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/simple_serial.cpp:34:39: note: 'data' declared here
    void send_data(const std::string& data) {
                                      ^
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/simple_serial.cpp:38:13: note: lambda expression begins here
            [this](const boost::system::error_code& error, std::size_t length) {
            ^
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/simple_serial.cpp:38:18: note: capture 'data' by value
            [this](const boost::system::error_code& error, std::size_t length) {
                 ^
                 , data
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/simple_serial.cpp:38:18: note: capture 'data' by reference
            [this](const boost::system::error_code& error, std::size_t length) {
                 ^
                 , &data
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/simple_serial.cpp:38:14: note: default capture by reference
            [this](const boost::system::error_code& error, std::size_t length) {
             ^
             &, 
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/simple_serial.cpp:38:72: warning: unused parameter 'length' [-Wunused-parameter]
            [this](const boost::system::error_code& error, std::size_t length) {
                                                                       ^
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/simple_serial.cpp:38:14: warning: lambda capture 'this' is not used [-Wunused-lambda-capture]
            [this](const boost::system::error_code& error, std::size_t length) {
             ^~~~
2 warnings and 1 error generated.
make[2]: *** [CMakeFiles/simple_serial.dir/build.make:76: CMakeFiles/simple_serial.dir/src/simple_serial.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:165: CMakeFiles/simple_serial.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/serial_node.cpp:58:72: warning: unused parameter 'length' [-Wunused-parameter]
            [this](const boost::system::error_code& error, std::size_t length) {
                                                                       ^
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/serial_node.cpp:58:14: warning: lambda capture 'this' is not used [-Wunused-lambda-capture]
            [this](const boost::system::error_code& error, std::size_t length) {
             ^~~~
2 warnings generated.
make: *** [Makefile:146: all] Error 2
